--- a/package.json
+++ b/package.json
@@ -1,97 +1,43 @@
 {
-  "name": "react-styled-flexboxgrid",
-  "version": "2.1.0",
-  "description": "Grid system based on styled-components and flexbox for React",
+  "name": "preact-emotion-flexboxgrid",
+  "version": "1.0.0",
+  "description": "Grid system based on preact-emotion and flexbox for React",
   "keywords": [
     "react",
     "grid",
     "flexbox",
     "styled",
-    "styled-components"
+    "preact-emotion"
   ],
-  "main": "lib/index.js",
-  "jsnext:main": "dist/styled-flexboxgrid.es.js",
-  "module": "dist/styled-flexboxgrid.es.js",
+  "main": "dist/preact-emotion-flexboxgrid.es.js",
+  "jsnext:main": "dist/preact-emotion-flexboxgrid.es.js",
+  "module": "dist/preact-emotion-flexboxgrid.es.js",
+  "entry": "src/index.js",
   "scripts": {
-    "build": "npm run build:lib && npm run build:dist",
-    "prebuild:lib": "rm -rf lib/*",
-    "build:lib": "babel --out-dir lib src",
-    "prebuild:umd": "rm -rf dist/*",
-    "prebuild:dist": "rm -rf dist/*",
-    "build:dist": "rollup -c && cross-env NODE_ENV=production rollup -c",
-    "build:watch": "npm run build:lib -- --watch",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config demo/webpack.config.babel.js --hot",
-    "demo:build": "cross-env NODE_ENV=production webpack --config demo/webpack.config.babel.js",
-    "lint": "eslint 'src/**/*.js'",
-    "test": "npm run lint && npm run mocha && npm run karma",
-    "karma": "cross-env NODE_ENV=test karma start",
-    "karma:watch": "cross-env NODE_ENV=test karma start --no-single-run",
-    "mocha": "cross-env NODE_ENV=test mocha --require babel-core/register **/*.test.js",
-    "mocha:watch": "cross-env NODE_ENV=test mocha --watch --require babel-core/register **/*.test.js",
-    "prepublish": "npm run build"
+    "prepublish": "NODE_ENV=production bup"
   },
   "author": "Loic Mahieu",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LoicMahieu/react-styled-flexboxgrid.git"
+    "url": "git+https://github.com/ramitos/preact-emotion-flexboxgrid.git"
   },
   "bugs": {
-    "url": "https://github.com/LoicMahieu/react-styled-flexboxgrid/issues"
+    "url": "https://github.com/ramitos/preact-emotion-flexboxgrid/issues"
   },
-  "homepage": "https://github.com/LoicMahieu/react-styled-flexboxgrid",
+  "homepage": "https://github.com/ramitos/preact-emotion-flexboxgrid",
+  "dependencies": {
+    "emotion": "^8.0.12",
+    "lodash.isinteger": "^4.0.4",
+    "preact-emotion": "^8.0.12"
+  },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-styled-components": "^1.2.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "cross-env": "^5.1.0",
-    "eslint": "^4.9.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-config-standard-react": "^5.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "html-loader": "^0.5.1",
-    "karma": "^1.7.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.5",
-    "lodash.compact": "^3.0.1",
-    "lodash.debounce": "^4.0.8",
-    "markdown-loader": "^2.0.1",
-    "mocha": "^4.0.1",
-    "prop-types": "^15.6.0",
-    "react": "~16.0.0",
-    "react-dom": "^16.0.0",
-    "rollup": "^0.50.0",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rollup-plugin-visualizer": "^0.3.1",
-    "styled-components": "~2.2.1",
-    "webpack": "^3.8.0",
-    "webpack-dev-server": "^2.9.2",
-    "webpack-hot-middleware": "^2.20.0"
+    "babel-preset-react-app": "^3.1.1",
+    "bup": "^4.1.3",
+    "prop-types": "^15.6.0"
   },
   "peerDependencies": {
-    "react": ">= 0.14.0 < 17.0.0-0",
     "prop-types": "^15.6.0",
-    "styled-components": "^2.0.0"
-  },
-  "dependencies": {
-    "lodash.isinteger": "^4.0.4"
+    "react": ">= 0.14.0 < 17.0.0-0"
   }
 }
